--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "npm run clean && webpack --mode production",
     "dev": "webpack-dev-server --open --mode development"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "repository": {
     "type": "git",
     "url": ""
@@ -16,24 +19,24 @@
   "license": "ISC",
   "homepage": "",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "rimraf": "^2.7.1",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.3",
+    "terser-webpack-plugin": "^1.4.1",
     "url-loader": "^1.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
