add slick slider

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "slick-carousel": "^1.8.1"
+  }
 }
