--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "jquery": "^3.4.1",
+    "lightslider": "^1.1.6",
     "simple-slider": "^1.0.1",
     "slick-carousel": "^1.8.1"
   }
