--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "lightslider": "^1.1.6",
-    "simple-slider": "^1.0.1",
-    "slick-carousel": "^1.8.1"
+    "simple-slider": "^1.0.1"
   }
 }
